--- a/src/component/reviewItem.hbs
+++ b/src/component/reviewItem.hbs
@@ -44,6 +44,8 @@
                     <p class="ms-2 mb-2">{{text}}</p>
                 </div>
                 {{/each}}
+                {{/with}}
+                </div>
             </div>
         </div>
     </section>
