--- a/src/container/bootstrap.hbs
+++ b/src/container/bootstrap.hbs
@@ -1,4 +1,24 @@
 <main class="p-5">
+<h1>Hello world!</h1>
+
+{{> title data="My title" }}
+
+
+<h1 style="color:blue; background:orange;">this is text</h1>
+</main>
+
+
+
+
+
+
+
+
+
+
+
+
+{{!-- <main class="p-5">
     <h1>
     Hello!<i class="bi bi-emoji-wink"></i>
     </h1>
@@ -11,7 +31,7 @@
         <div>
             <img src="/svg/slack.svg">
         </div>
-</main>
+</main> --}}
 
 
 
