--- a/src/container/task31.hbs
+++ b/src/container/task31.hbs
@@ -25,7 +25,7 @@
             <h2>{{title}}</h2>
             <div class="row">
                 {{#each cards}}
-                <div class="col-5 g-3">
+                <div class="col-6 g-3">
                     <div class="card">
                         {{#with picture}}
                         <img src="{{src}}" alt="{{alt}}" class="card-img-top">
@@ -100,13 +100,15 @@
 
         {{#with relaxion}}
         <div class="display-3">{{title}} </div>
-        <div class="row g-3">
+        <div class="row">
             {{#each cards}}
-            <div class="col-5">
-            <div class="card text-bd-secondary">
-                <header class="card-title">{{header}}</header>
-                <p class="card-title-secondary">{{title}}</p>
-                <p class="text">{{description}}</p>
+            <div class="col-6 g-4">
+            <div class="card text-bg-secondary">
+                <div class="card-title">{{header}}</div>
+                <div class="card-body">
+                    <h6>{{title}}</h6>
+                <p>{{description}}</p>
+                </div>
             </div>
             </div>
             {{/each}}
@@ -118,6 +120,7 @@
 
        
         {{#with rest}}
+        <div class="row">
         {{#each cards}}
                <div class="col-6 g-3">
                     <div class="card">
@@ -130,9 +133,9 @@
                         <div class="card-footer text-center">{{footer}}</div>
                     </div>
                     </div>
-                    </div>
-                    
+                   
          {{/each}}
+         </div>
          {{/with}}
           
 
