--- a/src/container/shophome.hbs
+++ b/src/container/shophome.hbs
@@ -1,4 +1,4 @@
-<header>
+<header class="m-3">
     {{#with navigation}}
         <div class="card">
              <div class="nav row">
@@ -15,7 +15,7 @@
      {{/with}}
 </header>
 
-<main>
+<main class="m-3">
         {{#with newsBlock}}
         <h2 class="text-center mt-5">{{title}}</h2>
         <div class="col-12">
