--- a/src/container/bootstrap.hbs
+++ b/src/container/bootstrap.hbs
@@ -1,6 +1,6 @@
 <main class="p-5">
 
-    {{!-- <h1>
+    <h1>
 
 
     <div class="row g-5">
@@ -47,7 +47,7 @@
 
 
 
-{{!-- <main class="p-5">
+ <main class="p-5">
     <h1>
 
     Hello!<i class="bi bi-emoji-wink"></i>
@@ -61,7 +61,7 @@
         <div>
             <img src="/svg/slack.svg">
         </div>
-</main> --}}
+</main> 
 
 
 
@@ -72,7 +72,7 @@
 
 
 
-{{!-- <main class="p-5">
+ <main class="p-5">
     <div class="row">
         <div class="col-12 mb-5">
              <div class="nav nav-tabs">
@@ -119,7 +119,7 @@
 
 
     </div>
-</main> --}}
+</main> 
 
 
 
@@ -134,7 +134,7 @@
 
 
 
-{{!-- <main>
+<main>
     <div class="row gy-5">
         <section class="col-12">
             <div class="card text-bg-dark">
@@ -301,6 +301,6 @@
 
 
     </div>
-</main> --}}
+</main>
 
     
