--- a/src/container/index.hbs
+++ b/src/container/index.hbs
@@ -1,17 +1,161 @@
-{{!--
+{{!
 Це код container файлу для index сторінки,
 в якому міститься код, котрий буде віддаватися по шляху (PATH) - "/"
---}}
+}}
 
-<div class="p-5">
-    <h1>USB хаб Type C 12 в 1 HDMI VGA AUX 3.5 mm</h1>
+<main class='m-5'>
+  <div class='row'>
+    <div class='col-6'>
+      <h1>
+        {{#with header}}
+          <p>{{name.firsname}} {{name.lastname}}</p>
+        {{/with}}
+      </h1>
+    </div>
 
-    <button type="button" class="btn btn-primary">Купити</button>
-</div>
+    <div class='col-6'>
+      <h1>
+        {{#with header}}
+          <p class='text-end'>{{name.title}}</p>
+        {{/with}}
+      </h1>
+    </div>
+  </div>
 
-{{!--
+  <hr class='my-3' />
+
+  <div class='row pt-3'>
+    <h2>Cписок сторінок</h2>
+
+    <p class='pt-3'>
+      Тут вам потрібно написати інформацію про ваш проєкт.
+      Поки що можна написати будь-який текст
+    </p>
+
+  </div>
+
+  <div class='col-3 pt-3'>
+    <div class='row'>
+      <a
+        href='/summary'
+        class='btn btn-primary'
+        target='_blank'
+      >Summary</a>
+      <a
+        href='/skills'
+        class='btn btn-primary my-1'
+        target='_blank'
+      >Skills</a>
+      <a
+        href='/education'
+        class='btn btn-primary'
+        target='_blank'
+      >Education</a>
+      <a
+        href='/work'
+        class='btn btn-primary my-1'
+        target='_blank'
+      >Work</a>
+      <a
+        href='/web'
+        class='btn btn-primary'
+        target='_blank'
+      >Web</a>
+      <a
+        href='/program'
+        class='btn btn-primary my-1'
+        target='_blank'
+      >Program</a>
+      <a
+        href='/bio'
+        class='btn btn-primary'
+        target='_blank'
+      >Bio</a>
+      <a
+        href='car'
+        class='btn btn-primary my-1'
+        target='_blank'
+      >Car</a>
+      <a
+        href='facebook'
+        class='btn btn-primary'
+        target='_blank'
+      >Facebook</a>
+      <a
+        href='/js'
+        class='btn btn-primary my-1'
+        target='_blank'
+      >JS</a>
+      <a
+        href='/mac'
+        class='btn btn-primary my-1'
+        target='_blank'
+      >Mac</a>
+      <a
+        href='person'
+        class='btn btn-primary'
+        target='_blank'
+      >Person</a>
+      <a
+        href='task21'
+        class='btn btn-primary my-1'
+        target='_blank'
+      >Task 2.1</a>
+      <a
+        href='task22'
+        class='btn btn-primary'
+        target='_blank'
+      >Task 2.2</a>
+      <a
+        href='task31'
+        class='btn btn-primary my-1'
+        target='_blank'
+      >Task 3.1</a>
+      <a
+        href='shopcart'
+        class='btn btn-primary'
+        target='_blank'
+      >Shop cart</a>
+      <a
+        href='shopcatalog'
+        class='btn btn-primary my-1'
+        target='_blank'
+      >Shop catalog</a>
+      <a
+        href='shophome'
+        class='btn btn-primary'
+        target='_blank'
+      >Shop home</a>
+      <a
+        href='shoporder'
+        class='btn btn-primary my-1'
+        target='_blank'
+      >Shop order</a>
+      <a
+        href='shopprofile'
+        class='btn btn-primary'
+        target='_blank'
+      >Shop profile</a>
+      <a
+        href='shopreview'
+        class='btn btn-primary my-1'
+        target='_blank'
+      >Shop Review</a>
+      <a
+        href='bootstrap'
+        class='btn btn-primary'
+        target='_blank'
+      >Bootstarp</a>
+
+    </div>
+
+  </div>
+
+</main>
+
+{{!
 Цей код містить лише те, що буде виводитись в
 
 <body>
     Адже наш layout/default.hbs має вже структуру HTML
-    --}}
+    }}
