--- a/src/container/index.hbs
+++ b/src/container/index.hbs
@@ -8,28 +8,32 @@
     <div class='col-6'>
       <h1>
         {{#with header}}
-          <p>{{name.firsname}} {{name.lastname}}</p>
+          <p>{{name.firstname}} {{name.lastname}}</p>
         {{/with}}
       </h1>
     </div>
 
-    <div class='col-6'>
+    <div class='col-4'>
       <h1>
-        {{#with header}}
-          <p class='text-end'>{{name.title}}</p>
+        {{#with page}}
+          <p class='text-end'>{{title}}</p>
         {{/with}}
       </h1>
     </div>
   </div>
+
 
   <hr class='my-3' />
 
   <div class='row pt-3'>
     <h2>Cписок сторінок</h2>
 
-    <p class='pt-3'>
-      Тут вам потрібно написати інформацію про ваш проєкт.
-      Поки що можна написати будь-який текст
+    <p class="pt-3">
+     Використання HTML, CSS та Bootstrap дозволяє розробникам створювати привабливі, функціональні та добре організовані веб-сторінки. HTML визначає структуру сторінки, CSS - її зовнішній вигляд, а Bootstrap - швидку і просту розробку, забезпечуючи готові компоненти і стилі.<br>
+HTML (HyperText Markup Language) - це мова розмітки, яка використовується для створення структури веб-сторінок. Вона визначає семантику (значення і структуру) контенту на сторінці, такі як заголовки, параграфи, посилання, таблиці, списки та інше. HTML використовує теги для маркування різних елементів на сторінці.<br>
+CSS (Cascading Style Sheets) - це мова стилів, яка використовується для візуального оформлення веб-сторінок. Вона визначає зовнішній вигляд елементів HTML, таких як кольори, шрифти, розміри, відступи, рамки і т.д. CSS використовується для забезпечення привабливого і консистентного дизайну сторінок.<br>
+Bootstrap - це популярний фреймворк (набір інструментів), що базується на HTML, CSS та JavaScript. Він надає набір готових стилів, компонентів і шаблонів, які полегшують розробку веб-інтерфейсів. Bootstrap дозволяє швидше створювати адаптивні, мобільно-дружні та привабливі веб-сторінки, використовуючи заздалегідь визначені класи CSS і JavaScript-компоненти.
+
     </p>
 
   </div>
