--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,7 +1,78 @@
+/*селектор :root це абстактний тег(в який можна додати головніші теги:зчитує html код) */
+
+:root {
+ background: purple;
+}
+
+
 html {
   max-width: 720px;
+
+  background: blue;
 }
 
 body {
   background: #fff;
+}
+/* це глобальний (універсальний) селектор */
+*{
+  color:red;
+}
+ /* селект h1 додає любий колір до тексту,який відноситься до h1 */
+h1 {
+  color:green;
+}
+/* буде спрацьовувати каскадність(все що буде додано нижче буде мати приорітет) */
+h1 {
+  color:orange;
+}
+
+/* цей селектор надає стилі для всіх тегів,які мають певний клас,який був вказаний в селекті(та потім його передати в html коді він починається з цого знаку ".")*/
+.box {
+  background:#939393;
+}
+
+.button {
+  background: red;
+  color:black;
+ }
+
+/* в css коді є можливість використовувати декілька селекторів,до яких треба додати певний набір властивостей */
+h1,
+h2#user,
+button.button#button {
+  color:green
+}
+
+/* селектор класу починається з "#"і за ним слідує імʼя.цей селектор надає стилі для всих тегів,які мають певний ідентифікатор(який був вказаний у селекторі) */
+#user,
+.user {
+  color:blue;
+}
+/* дочірній селетор-він надає стилі для всіх тегів,які є дочірніми тегами головного тегу(для цього треба вказати цей знак ">" */
+#box > p {
+  color:paleturquoise;
+}
+
+footer > .user {
+  color:palevioletred;
+}
+
+footer > h1 {
+  color:palevioletred;
+}
+/* селектор нащадка-це будь-який тег в середині тега незалежно від його вкладеності(позначається через пробіл або ">>")*/
+footer em.child,
+footer div.child {
+  color:rgb(16, 225, 117);
+}
+
+/* сестринський тег */
+h1 + p {
+  background: black;
+}
+/* сусідський селектор-надає стилі для всіх сусідських тегів,які йдуть писля основного тегу_для цього вказуємо "~"тільду */
+h1 ~ p,
+h1 ~ * > p {
+  background: black;
 }
