--- a/src/container/index.hbs
+++ b/src/container/index.hbs
@@ -2,12 +2,48 @@
 Це код container файлу для index сторінки, 
 в якому міститься код, котрий буде віддаватися по шляху (PATH) - "/"
  --}}
+ {{!-- спочатку спрацьовує код,який прописаний в файлі css,потім той що в тегу style,потім вже зчитує інлайн --}}
+ {{!-- <style>
+    h1 {
+        color:black;
+    }
+ </style> --}}
 
-<div class="p-5">
+{{!-- <section class="p-5 box">
+    {{!-- також спрацьовує стиль доданий інлайн --}}
+    <h1 style="color:yellow">USB хаб Type C 12 в 1 HDMI VGA AUX 3.5 mm</h1>
+     <h1>USB хаб Type C 12 в 1 HDMI VGA AUX 3.5 mm</h1>
+    <h2 id="user">USB хаб Type C 12 в 1 HDMI VGA AUX 3.5 mm</h2>
+    
+
+    <button type="button" id="button" class="button">Купити</button>
+    
+    <p class="user">link</p>
+</section> --}}
+
+<section class="p-5 box">
     <h1>USB хаб Type C 12 в 1 HDMI VGA AUX 3.5 mm</h1>
+    <p class="user">link</p>
+</section>
 
-    <button type="button" class="btn btn-primary">Купити</button>
-</div>
+<section class="p-5 box">
+    <strong>Test</strong>
+    <h1>USB хаб Type C 12 в 1 HDMI VGA AUX 3.5 mm</h1>
+     <strong>Test</strong>
+    <em>Test</em>
+    <section>
+        <p class="user fufjgkhlo">link</p>
+    </section>
+    
+</section>
+
+{{!-- <footer class="p-5 box">
+    <h1>USB хаб Type C 12 в 1 HDMI VGA AUX 3.5 mm</h1>
+    <p class="user">
+        <em class="child">Test EM</em>
+    </p>
+    <em class="child">Test EM</em>
+</footer> --}}
 
 {{!-- 
     Цей код містить лише те, що буде виводитись в <body>
