--- a/public/css/index.css
+++ b/public/css/index.css
@@ -27,7 +27,7 @@ h1 {
   color:orange;
 }
 
-/* цей селектор надає стилі для всіх тегів,які мають певний клас,який був вказаний в селекті(та потім його передати в html коді він починається з цого знаку ".")*/
+/* цей селектор (класу)надає стилі для всіх тегів,які мають певний клас,який був вказаний в селекті(та потім його передати в html коді він починається з цого знаку ".")*/
 .box {
   background:#939393;
 }
@@ -44,7 +44,7 @@ button.button#button {
   color:green
 }
 
-/* селектор класу починається з "#"і за ним слідує імʼя.цей селектор надає стилі для всих тегів,які мають певний ідентифікатор(який був вказаний у селекторі) */
+/* селектор класу(ідентифікатора) починається з "#"і за ним слідує імʼя.цей селектор надає стилі для всих тегів,які мають певний ідентифікатор(який був вказаний у селекторі) */
 #user,
 .user {
   color:blue;
