--- a/src/container/index.hbs
+++ b/src/container/index.hbs
@@ -9,7 +9,7 @@
     }
  </style> --}}
 
-{{!-- <section class="p-5 box">
+<section class="p-5 box">
     {{!-- також спрацьовує стиль доданий інлайн --}}
     <h1 style="color:yellow">USB хаб Type C 12 в 1 HDMI VGA AUX 3.5 mm</h1>
      <h1>USB хаб Type C 12 в 1 HDMI VGA AUX 3.5 mm</h1>
@@ -19,7 +19,7 @@
     <button type="button" id="button" class="button">Купити</button>
     
     <p class="user">link</p>
-</section> --}}
+</section>
 
 <section class="p-5 box">
     <h1>USB хаб Type C 12 в 1 HDMI VGA AUX 3.5 mm</h1>
@@ -37,13 +37,13 @@
     
 </section>
 
-{{!-- <footer class="p-5 box">
+<footer class="p-5 box">
     <h1>USB хаб Type C 12 в 1 HDMI VGA AUX 3.5 mm</h1>
     <p class="user">
         <em class="child">Test EM</em>
     </p>
     <em class="child">Test EM</em>
-</footer> --}}
+</footer>
 
 {{!-- 
     Цей код містить лише те, що буде виводитись в <body>
