--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,11 +1,4 @@
-/*селектор :root це абстактний тег(в який можна додати головніші теги:зчитує html код) */
-
-:root {
- background: purple;
-}
-
-
-html {
+ /* html {
   max-width: 720px;
 
   background: blue;
@@ -13,21 +6,26 @@ html {
 
 body {
   background: #fff;
-}
-/* це глобальний (універсальний) селектор */
-*{
+} */
+/* це глобальний (універсальний) селектор
+ *{
   color:red;
-}
- /* селект h1 додає любий колір до тексту,який відноситься до h1 */
+} */
+ /* селект h1 додає любий колір до тексту,який відноситься до h1
 h1 {
   color:green;
-}
-/* буде спрацьовувати каскадність(все що буде додано нижче буде мати приорітет) */
+} */
+/* буде спрацьовувати каскадність(все що буде додано нижче буде мати приорітет)
 h1 {
   color:orange;
-}
+} */
 
-/* цей селектор (класу)надає стилі для всіх тегів,які мають певний клас,який був вказаний в селекті(та потім його передати в html коді він починається з цого знаку ".")*/
+ /* селектор :root це абстактний тег(в який можна додати головніші теги:зчитує html код)
+:root {
+ background: purple;
+} */
+
+/* цей селектор (класу)надає стилі для всіх тегів,які мають певний клас,який був вказаний в селекті(та потім його передати в html коді він починається з цого знаку ".")
 .box {
   background:#939393;
 }
@@ -35,21 +33,21 @@ h1 {
 .button {
   background: red;
   color:black;
- }
+ } */
 
-/* в css коді є можливість використовувати декілька селекторів,до яких треба додати певний набір властивостей */
+/* в css коді є можливість використовувати декілька селекторів,до яких треба додати певний набір властивостей
 h1,
 h2#user,
 button.button#button {
   color:green
-}
+} */
 
-/* селектор класу(ідентифікатора) починається з "#"і за ним слідує імʼя.цей селектор надає стилі для всих тегів,які мають певний ідентифікатор(який був вказаний у селекторі) */
+/* селектор класу(ідентифікатора) починається з "#"і за ним слідує імʼя.цей селектор надає стилі для всих тегів,які мають певний ідентифікатор(який був вказаний у селекторі)
 #user,
 .user {
   color:blue;
-}
-/* дочірній селетор-він надає стилі для всіх тегів,які є дочірніми тегами головного тегу(для цього треба вказати цей знак ">" */
+} */
+/* дочірній селетор-він надає стилі для всіх тегів,які є дочірніми тегами головного тегу(для цього треба вказати цей знак ">"
 #box > p {
   color:paleturquoise;
 }
@@ -60,19 +58,47 @@ footer > .user {
 
 footer > h1 {
   color:palevioletred;
-}
-/* селектор нащадка-це будь-який тег в середині тега незалежно від його вкладеності(позначається через пробіл або ">>")*/
+} */
+/* селектор нащадка-це будь-який тег в середині тега незалежно від його вкладеності(позначається через пробіл або ">>")
 footer em.child,
 footer div.child {
   color:rgb(16, 225, 117);
-}
+} */
 
-/* сестринський тег */
+/* сестринський тег
 h1 + p {
   background: black;
-}
-/* сусідський селектор-надає стилі для всіх сусідських тегів,які йдуть писля основного тегу_для цього вказуємо "~"тільду */
+} */
+     /* сусідський селектор-надає стилі для всіх сусідських тегів,які йдуть писля основного тегу_для цього вказуємо "~"тільду
 h1 ~ p,
 h1 ~ * > p {
   background: black;
-}
+}  */
+
+
+ .card-dark {
+  background:#d4cbcb;
+ }
+
+ .item {
+  color:green
+ }
+/* селектор першої/останньої дитини-вибирає перший тег,якщо він є дитиною в середині батківського тегу.позначається ":"селектор псевдокласу(визначає особливий стан :first/:last).
+ селектор однієх дитини-вибирає один тег,якщо він є дитиною в середині батківського тегу.позначається ":"селектор псевдокласу(визначає особливий стан only).
+ селектор першого/останнього типу-вибирає перший елемент по заданому тегу серед сусідських (first/last)*/
+ 
+.item:last-of-type {
+  color:blue;
+ }
+/* селетор одиничного типу-якщо він є єдиним таким тегом серед сусідів(:only) */
+ .item:only-of-type {
+  color:red;
+ }
+/* селектор порядкової/зворотньої порядкової дитини-обирає елемент на основі їхньої позиції в батківському елементі :nth-child()/:nth-last-child() */
+ .item:nth-last-child(){
+  color:yellowgreen;
+ }
+
+ p:not(.item) {
+  color:purple;
+ }
