--- a/src/container/index.hbs
+++ b/src/container/index.hbs
@@ -8,9 +8,8 @@
         color:black;
     }
  </style> --}}
-
-<section class="p-5 box">
-    {{!-- також спрацьовує стиль доданий інлайн --}}
+ {{!-- також спрацьовує стиль доданий інлайн --}}
+{{!-- <section class="p-5 box">
     <h1 style="color:yellow">USB хаб Type C 12 в 1 HDMI VGA AUX 3.5 mm</h1>
      <h1>USB хаб Type C 12 в 1 HDMI VGA AUX 3.5 mm</h1>
     <h2 id="user">USB хаб Type C 12 в 1 HDMI VGA AUX 3.5 mm</h2>
@@ -19,9 +18,9 @@
     <button type="button" id="button" class="button">Купити</button>
     
     <p class="user">link</p>
-</section>
+</section> --}}
 
-<section class="p-5 box">
+{{!-- <section class="p-5 box">
     <h1>USB хаб Type C 12 в 1 HDMI VGA AUX 3.5 mm</h1>
     <p class="user">link</p>
 </section>
@@ -35,17 +34,29 @@
         <p class="user fufjgkhlo">link</p>
     </section>
     
-</section>
+</section> --}}
 
-<footer class="p-5 box">
+{{!-- <footer class="p-5 box">
     <h1>USB хаб Type C 12 в 1 HDMI VGA AUX 3.5 mm</h1>
     <p class="user">
         <em class="child">Test EM</em>
     </p>
     <em class="child">Test EM</em>
-</footer>
+</footer>  --}}
 
 {{!-- 
     Цей код містить лише те, що буде виводитись в <body>
     Адже наш layout/default.hbs має вже структуру HTML
 --}}
+
+<div class="card p-2 m-5 card-dark">
+    <div class="item">First</div>
+     <div class="item">First</div>
+    <p class="item">Second</p>
+    <p class="item">Second</p>
+    <strong class="item">Test strong</strong>
+    <p>Not</p>
+    <article class="item">Last</article>
+    <article class="item">Last</article>
+    
+</div>
