--- a/public/css/index.css
+++ b/public/css/index.css
@@ -75,30 +75,97 @@ h1 ~ * > p {
   background: black;
 }  */
 
+/*  --------------------------------------------------------------------------------------------- */
+
 
  .card-dark {
-  background:#d4cbcb;
+  background:#cecaca;
  }
 
  .item {
   color:green
  }
+
 /* селектор першої/останньої дитини-вибирає перший тег,якщо він є дитиною в середині батківського тегу.позначається ":"селектор псевдокласу(визначає особливий стан :first/:last).
  селектор однієх дитини-вибирає один тег,якщо він є дитиною в середині батківського тегу.позначається ":"селектор псевдокласу(визначає особливий стан only).
  селектор першого/останнього типу-вибирає перший елемент по заданому тегу серед сусідських (first/last)*/
  
-.item:last-of-type {
+/* .item:last-of-type {
   color:blue;
- }
+ } */
 /* селетор одиничного типу-якщо він є єдиним таким тегом серед сусідів(:only) */
- .item:only-of-type {
+ /* .item:only-of-type {
   color:red;
- }
+ } */
 /* селектор порядкової/зворотньої порядкової дитини-обирає елемент на основі їхньої позиції в батківському елементі :nth-child()/:nth-last-child() */
- .item:nth-last-child(){
+ /* .item:nth-last-child(){
   color:yellowgreen;
  }
 
  p:not(.item) {
   color:purple;
+ } */
+
+/*  --------------------------------------------------------------------------------------------- */
+.input-dark {
+  background:#858181;
+ }
+
+ /* селектор атрибутів-дозволяє вибрати елементи на основі їх атритутів і їх значень "[]".
+  селектор значення атрибута-вибирає тег,якщо він має вказаний атрибут з вказаним значенням "[atr="value"]" ;атрибут=значення.
+  селектор нявності з.а.-вибирає тег,в якому можуть перебувати декілька значень,одне з яких є вказаним значенням "[atr~="value"]".
+  селектор префіксу з.а.-вибирає тег,якщо він має вказаний атрибут,значення якого починається з вказаного value або value- ; [atr|="value"].
+  селектор початку з.а.-вибирає тег,якщо він має вказаний атрибут,значення якого починається з вказаного value ; [atr^="value"].
+  селектор кореня з.а.-вибирає тег,якщо він має вказаний атрибут,значення якого має корінь value ;[atr*="value"].
+  сеоектор кінцівки з.а.-вибирає тег,якщо він має вказаний атрибут,значення якого закінчується з вказаного value ;[atr$="value"].*/
+ .input-dark[required] {
+  background:#ef2e2e;
+ }
+
+  .input-dark[type=number] {
+  background:#01b219;
+ }
+
+ .small-img[alt~="small"]{
+  height: 500px;
+ }
+
+ a[rel~="external"]{
+  color:green;
+ }
+
+ button[class|="btn"]{
+  background: rgb(141, 98, 98);
+ }
+
+  a[class*="btn"]{
+  background: rgb(144, 52, 52);
+ }
+
+  a[class$="big"]{
+  background: rgb(30, 33, 125);
+ }
+
+ /* селектор псевдоелементів/першої літери/першого рядка-дозволяє стилізувати певні частини елементів або стилізація першої літери/першого рядка "::" .
+ селект псевдоелемента плейсхолдер-задає стилізацию для тексту атрибута placeholder тегу input "::placeholder" .
+ селект псевдоелемента "попереду"-надає можливість вказати контент,який буде йти попереду основного елемента та надати йому стилізацію "::before" та доступніий content для псевдоелемента.
+ селект псевдоелемента "після"-надає можливість вказати контент,який буде йти після основного елемента та надати йому стилізацію "::after" та доступніий content для псевдоелемента.*/
+ .btn::first-letter {
+  color:red;
+ }
+
+ .big-text::first-line {
+  color:red;
+ }
+
+ .input-dark::placeholder {
+  color:green;
+  background: blue;
+ }
+
+ .before-after::before,
+ .before-after::after {
+  content: "$$$";
+  color:green;
+  background: yellow;
  }
