--- a/src/container/index.hbs
+++ b/src/container/index.hbs
@@ -48,8 +48,9 @@
     Цей код містить лише те, що буде виводитись в <body>
     Адже наш layout/default.hbs має вже структуру HTML
 --}}
-
-<div class="card p-2 m-5 card-dark">
+{{!-- --------------------------------------------------------------------------------- --}}
+{{!-- 
+<div class="card p-5 m-5 card-dark">
     <div class="item">First</div>
      <div class="item">First</div>
     <p class="item">Second</p>
@@ -59,4 +60,26 @@
     <article class="item">Last</article>
     <article class="item">Last</article>
     
+</div> --}}
+{{!-- --------------------------------------------------------------------------------- --}}{{!-- --------------------------------------------------------------------------------- --}}
+<div class="card p-5 m-5 card-dark">
+    <input class="input-dark p-5"placeholder="This is text" required>
+    {{!-- <input class="input-dark" type="number"> --}}
 </div>
+
+<div class="card p-5 m-5 card-dark">
+    <img alt="image small card 100px" class="small-img" src="https://picsum.photos/200/300" height="100px"/>
+
+    <a href="https://picsum.photos/200/300" rel="external">Link</a>
+    <br>
+    <button class="before-after btn">Click me</button>
+    <br>
+    <a class="before-after small frg-btnvtv fvfdfv-secondary big" href="https://picsum.photos/200/300">Click me</a>
+</div>
+
+<div class="card p-5 m-5 card-dark">
+    <p class="before-after">
+        this is text about info big test info<br>this is text about info big test info
+        </p>
+</div>
+
