--- a/src/container/index.hbs
+++ b/src/container/index.hbs
@@ -61,10 +61,10 @@
     <article class="item">Last</article>
     
 </div> --}}
-{{!-- --------------------------------------------------------------------------------- --}}{{!-- --------------------------------------------------------------------------------- --}}
-<div class="card p-5 m-5 card-dark">
+{{!-- -------------------------------------------------------------------------------------------- --}}
+{{!-- <div class="card p-5 m-5 card-dark">
     <input class="input-dark p-5"placeholder="This is text" required>
-    {{!-- <input class="input-dark" type="number"> --}}
+    <input class="input-dark" type="number">
 </div>
 
 <div class="card p-5 m-5 card-dark">
@@ -81,5 +81,49 @@
     <p class="before-after">
         this is text about info big test info<br>this is text about info big test info
         </p>
+</div> --}}
+{{!-- ---------------------------------------------------------------------------------------------- --}}
+
+<div lang="fr" class="card p-5 m-5 card-dark">
+   <a class="link" href="https://habr.com/ru/articles/119090/">Click me</a>
 </div>
 
+<div lang="en" id="test" class="card p-5 m-5 card-dark">
+   <input>
+   <span>Hello world!</span>
+   <button>Test button</button>
+</div>
+
+<div class="p-5 m-5 card-dark">
+   <button>Test button</button>
+   <button disabled>Disabled button</button>
+</div>
+
+<div class="p-5 m-5 card-dark">
+   <input class="inp">
+</div>
+
+<div class="p-5 m-5 card-dark">
+   <input class="inp"readonly>
+
+  <div class="mt-5">
+     <div>
+          <input type="checkbox" checked>
+          <span>First checkbox</span>
+     </div>
+     <div>
+          <input type="checkbox">
+          <span>Second checkbox</span>
+     </div>
+  </div>
+</div>
+
+<div class="p-5 m-5 card-dark">
+ <div>
+     <input type="email" required class="valid" placeholder="test">
+     <span>Test text</span>
+ </div>
+<div class="mt-5">
+     <input type="number" min="10" max="20" required class="number">
+</div>
+</div>
